syntax = "proto3";

option java_multiple_files = true;
option java_package = "uber.proto.rpc";
option java_outer_classname = "UberRPC";

package uber.rpc;

import "objects.proto";

service UberRPCService {

  // Add ride assuming it is invoked
  // on a server the correct shard
  rpc addRide(uber.obj.Ride) returns (uber.obj.ID);

}
