syntax = "proto3";

option java_multiple_files = true;
option java_package = "uber.proto.rpc";

package uber.rpc;

import "objects.proto";
import "google/protobuf/empty.proto";



service ShardCommunication {

  rpc gossipRide(uber.obj.Ride) returns (google.protobuf.Empty);

}
